# Spatial-Search-Structures

./: .gitignore  CMakeLists.txt  spatial_structures.py  test_SurfaceTree2D.py  test_WNOcTree.py  test_WNQuadTree.py  visu.py
assets/: read_msh.py  square_with_hole.geo
examples/: CMakeLists.txt  main3D.cpp  test_IndexedMeshTree2D.py  test_MeshTree2D.py  test_PointCloudNN.py  test_SurfaceTree2D.py  test_WNOcTree.py  test_WNQuadTree.py
exec/: CMakeLists.txt  fast_winding_number.cpp  fast_winding_number_gmsh.cpp  main.cpp  main3D.cpp  nbody.cpp
include/: CMakeLists.txt  bbox.h  bbox.hpp  indexed_quadtree.hpp  point.h  point.hpp  predicates.hpp  quadtree.hpp
interface/: CMakeLists.txt  indexed_mesh_node_loc_2D.h  mesh_node_loc_2D.h  point_cloud_nearest_neighbor.h  surface_distance_2D.h  winding_number_tree_2D.h  winding_number_tree_3D.h
python/: CMakeLists.txt  __init__.py  fwn_2D.py  fwn_3D.py  indexed_mesh_node_loc_2D.py  mesh_node_loc_2D.py  nearest_neighbor.py  spatial_structures.py  surface_distance_2D.py
src/: CMakeLists.txt  Config.cmake.in  bbox.cpp  indexed_mesh_node_loc_2D.cpp  mesh_node_loc_2D.cpp  point.cpp  point_cloud_nearest_neighbor.cpp  surface_distance_2D.cpp  winding_number_tree_2D.cpp  winding_number_tree_3D.cpp
