add_executable(main)
target_sources(main PUBLIC main.cpp)
target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/include)

add_executable(main3D)
target_sources(main3D PUBLIC main3D.cpp)
target_include_directories(main3D PUBLIC ${CMAKE_SOURCE_DIR}/include)

add_executable(wn)
target_sources(wn PUBLIC fast_winding_number.cpp)
target_include_directories(wn PUBLIC ${CMAKE_SOURCE_DIR}/include)

find_library(gmsh gmsh)
find_package(OpenMP)
add_executable(gmsh_wn)
target_sources(gmsh_wn PUBLIC fast_winding_number_gmsh.cpp)
target_include_directories(gmsh_wn PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(gmsh_wn PUBLIC ${gmsh} omp)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
